[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "la-visualizer"
version = "0.1.0"
description = "Linear algebra visualizations inspired by the lavisuals notebook."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.24",
    "streamlit>=1.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
la-visualizer = "la_visualizer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
